--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,24 @@
+@media (min-width: 1px) and (max-width: 576px) {
+                #top p
+                {
+                    font-size: 50px;
+                    padding: 40px;
+                }
+                #intro
+                {
+                    font-size: 12px;
+                    padding: 15px;
+                }
+                #top
+                {
+                    height: 150px;
+                }
+                img
+                {
+                    margin: 20px;
+                }
 
+            }
 #top{
     border-radius: 50px;
     background-image: url("coffee.jpg");
@@ -7,6 +27,14 @@
     background-position: center;
     height: 300px;
     margin-bottom: 0px;
+}
+
+#top p{
+    color: #ffe000;
+    text-align:center;
+    padding: 70px;
+    font-size: 100px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 }
 
 #middle{
@@ -18,21 +46,13 @@
     margin-bottom: 10px;
 }
 
-#title{
-    color: yellow;
-    text-align:center;
-    padding: 70px;
-    font-size: 100px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
 #intro{
     color: black;
     text-align: justify;
     padding: 60px;
     font-size: 25px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    padding-top: 100px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+    padding-top: 80px;
 }
 
 img {
@@ -55,4 +75,28 @@ img {
 .btn-primary:hover{
     background-color: #b79d7b;
     border-color: inherit;
+}
+
+.table-striped{
+    border-style: solid;
+    border-width: 10px;
+    border-color: #b79d7b;
+    width: 60%;
+    margin: auto;
+}
+
+td:hover {
+    background-color: #b79d7b;
+}
+
+#links{
+    color: black;
+    text-align: justify;
+    font-size: 25px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+    margin: 40px;
+}
+
+#links a{
+    color: #6e512b;
 }
